# aiq-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml
src/aiq/: __init__.py  cli.py  models.py
src/aiq/api/: client.py
src/aiq/auth/: __init__.py  device_flow.py  token_store.py
src/aiq/extractor/: __init__.py  macf.py  models.py
src/aiq/report/: __init__.py  pdf.py
src/aiq/review/: __init__.py  interactive.py
src/aiq/scanner/: __init__.py  base.py  claude.py  cursor.py  evaluator.py  git.py  iteration.py  mcp.py  registry.py  system.py
src/aiq/scrubber/: __init__.py  patterns.py  pii.py
tests/: test_api_client.py  test_auth.py  test_cli.py  test_evaluator.py  test_extractor.py  test_integration.py  test_models.py  test_report.py  test_review.py  test_scanner_base.py  test_scanner_claude.py  test_scanner_cursor.py  test_scanner_git.py  test_scanner_iteration.py  test_scanner_mcp.py  test_scanner_registry.py  test_scanner_system.py  test_scrubber.py
tests/fixtures/claude_home/.claude/: CLAUDE.md  settings.json
tests/fixtures/claude_home/.claude/memory/: MEMORY.md
tests/fixtures/claude_home/.claude/rules/: code-quality.md
tests/fixtures/claude_home/.claude/skills/test-skill/: skill.md
tests/fixtures/cursor_project/: .cursorrules
tests/fixtures/cursor_project/.cursor/rules/: api.md
