[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiq"
version = "0.1.0"
description = "AIQ CLI - Evaluate your personalized AI setup and get a verifiable proficiency score"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "AIQ Team" },
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
    "pydantic>=2.0",
    "keyring>=25.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
aiq = "aiq.cli:main"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
